--- a/index.html
+++ b/index.html
@@ -1,13 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>科拉莉太可爱了</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h1>test</h1>
+        <div class="title1">
+            <h1 id="mainTitle">科拉莉太可爱了!!!</h1>
+        </div>
+        <input placeholder="输入指令" class="cmdBox"><button class="enterButton">运行</button>
     </header>
+    <section class="img1">
+        <img class="imageF" title="???" id="titleImg" onclick="playSound()" onmouseover="changeTitleColor()"
+            onmouseout="resetTitleColor()">
+        <p style="text-align: center; font-size: 1vw;" id="imgID"></p>
+    </section>
+    <section class="mainSection">
+        <h1 class="where2go"><br>--------------------- 链接 ---------------------</h1>
+        <p><br></p>
+        <div class="navigation">
+            <a href="https://space.bilibili.com/1509663954"><button>Bilibili</button></a>
+            <a href="https://osu.ppy.sh/users/32330160"><button>osu!</button></a>
+        </div>
+        <br>
+        <h1>------------ 简介: 音乐游戏(主要VSRG) ------------</h1>
+        <br>
+        <div class="textc">
+            <div>
+                <img src="img/hh.png" title="藿藿真可爱" class="imageF">
+            </div>
+            <div>
+                <h2>入坑</h2>
+                <p>2020.6: 太鼓达人<br>2021.8: Muse Dash<br>2022.8: Phigros<br>2022.?: Arcaea<br><strong>2023.?: Malody and
+                        osu!mania</strong></p>
+                <h2>Phigros</h2>
+                <p>rks > 16.5</p>
+                <h2>Arcaea</h2>
+                <p>Fracture Ray > 995?k</p>
+                <h2>osu!mania (VSRG 4k)</h2>
+                <p>Extra 4 v2/v3 and Reform β Clear(od9)</p>
+
+            </div>
+
+        </div>
+        <div class="maniaScreenShotDiv">
+            <img class="maniaScreenShot" src="img/mania1.png"
+                title="far in the blue sky... 0.95x cut od8 clear [delta]">
+            <img class="maniaScreenShot" src="img/mania2.png" title="大地旋律(loved) 1.2x S [delta]">
+            <img class="maniaScreenShot" src="img/mania3.png" title="Hustler 1.05x 97+ [gamma]">
+            <img class="maniaScreenShot" src="img/mania4.png" title="Lemon Tree(loved) 97+ [?]无暂停!!!">
+            <img class="maniaScreenShot" src="img/mania5.png" title="Break 1.15x S [算上手癖delta]">
+            <img class="maniaScreenShot" src="img/mania6.png" title="Extra 6 v3叠 clear (尾杀太卡手掉了1%)">
+            <img class="maniaScreenShot" src="img/mania7.png" title="Extra 6 v2切 S">
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
+
 </html>
