--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="navigation">
             <a href="https://space.bilibili.com/1509663954"><button>Bilibili</button></a>
             <a href="https://osu.ppy.sh/users/32330160"><button>osu!</button></a>
+            <a href="https://tuxun.fun/user/1403299"><button>图寻</button></a>
         </div>
         <br>
         <h1>------------ 简介: 音乐游戏(主要VSRG) ------------</h1>
